# kfs

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  hello.c  report.md  simplefs.h
docs/: index.html
kfsctl/: .gitignore  Makefile  README.md  add.c  cmd.h  ctl.c  ctl.h  defrag.c  kfsctl  log.c  main.c  restore.c  status.c
kfsd/: 50-virtiofsd.json  Cargo.toml  README.md
kfsd/src/: filesystem.rs  fs_cache_req_handler.rs  lib.rs  main.rs  oslib.rs  server.rs
kfsd/src/passthrough/: inode_store.rs  mod.rs
kfsd/src/passthrough/device_state/: deserialization.rs  mod.rs  preserialization.rs  serialization.rs
md-docs/: README.md  _config.yml  dir.yml  ext4.md  fuse.md  test.md
mkfs/: README.md  config.h  main.c
script/: init.sh  initfs.sh
src/: bitmap.c  bitmap.h  cache.c  cache.h  common.h  ctl.c  ctl.h  dcache.c  dcache.h  dentry.c  dentry.h  disk.c  disk.h  extents.c  extents.h  fs.c  fs.h  inode.c  inode.h  logging.c  logging.h  main.c  op_access.c  op_chmod.c  op_chown.c  op_create.c  op_destory.c  op_flush.c  op_getattr.c  op_init.c  op_ioctl.c  op_link.c  op_lock.c  op_lseek.c  op_mkdir.c  op_open.c  op_read.c  op_readdir.c  op_readlink.c  op_release.c  (+10 more)
test/: 000-test-create-del-file.sh  001-test-write-read.sh  002-test-create-del-dir.sh  003-test-create-file-in-dir.sh  004-test-mv-file.sh  005-test-cp-file.sh  006-test_create-many-files.sh  007-test-symlink.sh  008-test-chmod.sh  009-test-utimes.sh  010-test-hardlink.sh  011-test-softlink.sh  012-test-many-files.sh  013-test-large-files.sh  014-test-long60-symlink.sh  015-test-dentry.sh  (+1 more)
(+43 files in other folders)
